networking/disallow-wildcard-ingress/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-wildcard-ingress
spec:
  steps:
    - name: 01 - Apply policy
      try:
        - apply:
            file: ../policy.yaml
    - name: 02 - Wait for policy to be ready
      try:
        - assert:
            resource:
              apiVersion: kyverno.io/v1
              kind: ClusterPolicy
              metadata:
                name: disallow-wildcard-ingress
              status:
                conditions:
                  - reason: Succeeded
                    status: "True"
                    type: Ready
    - name: 03 - Ingress with explicit host should be admitted
      try:
        - apply:
            file: valid-ingress.yaml
            expect:
              - check:
                  ($error == null): true
    - name: 04 - Ingress with wildcard host should be blocked
      try:
        - apply:
            file: invalid-wildcard-host.yaml
            expect:
              - check:
                  ($error != null): true
